--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="TicTacToe/index.html">
       <div class="game OneVsOne hid">
         <div class="gamepic">
-          <img src="game_images\TicTacToe.png" alt="TicTacToe">
+          <img src="game_images\TicTacToe2.png" alt="TicTacToe">
         </div>
         <div class="gamedesc">
             <h2>TicTacToe</h2>
@@ -49,7 +49,7 @@
       <a href="Connect4/index.html">
       <div class="game OneVsOne hid">
         <div class="gamepic">
-          <img src="game_images/Connect4.jpg" alt="Connect 4">
+          <img src="game_images/connect4new.png" alt="Connect 4">
         </div>
         <div class="gamedesc">
             <h2>Connect 4</h2>
@@ -61,7 +61,7 @@
       <a href="Battleship/index.html">
         <div class="game OneVsOne hid">
           <div class="gamepic">
-            <img src="game_images/battleship.png" alt="Battleships" style="width:31.5vw">
+            <img src="game_images/battleship2.png" alt="Battleships">
           </div>
           <div class="gamedesc">
               <h2>Battleship</h2>
