--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href="FantasyAD/index.html">
   <div class="game Singleplayer hid">
     <div class="gamepic">
-      <img src="game_images\sword.jpg" alt="Fantasy Adventure">
+      <img src="game_images\sword.png" alt="Fantasy Adventure">
     </div>
     <div class="gamedesc">
         <h2>TextAdven #</h2>
@@ -79,7 +79,7 @@
       <a href="Guess/index.html">
     <div class="game twoPlayers hid">
       <div class="gamepic">
-        <img src="game_images/explain0.png" alt="Guess">
+        <img src="game_images/explain1.png" alt="Guess">
       </div>
       <div class="gamedesc">
           <h2>Guess</h2>
@@ -92,7 +92,7 @@
 <a href="Memory/index.html">
   <div class="game twoPlayers hid">
     <div class="gamepic">
-      <img src="game_images/icon.png" alt="Memory" style="width: 90%;">
+      <img src="game_images/memory2.png" alt="Memory">
     </div>
     <div class="gamedesc">
         <h2>Memory</h2>
@@ -104,7 +104,7 @@
 <a href="Circa/index.html">
   <div class="game twoPlayers hid">
     <div class="gamepic">
-      <img src="game_images/Circa.png" alt="Circa">
+      <img src="game_images/Circa2.png" alt="Circa">
     </div>
     <div class="gamedesc">
         <h2>Circa</h2>
