Added GoodleJump & GlowHockey + Design V2.0

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play</title>
+    <title>GameHub</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 
@@ -18,7 +18,7 @@
 <a href="FantasyAD/index.html">
   <div class="game Singleplayer hid">
     <div class="gamepic">
-      <img src="game_images\sword.png" alt="Fantasy Adventure">
+      <img src="public/game_images\sword.png" alt="Fantasy Adventure">
     </div>
     <div class="gamedesc">
         <h2>TextAdven #</h2>
@@ -26,6 +26,18 @@
     </div>
   </div>
   </a>
+
+  <a href="GoodleJump/index.html">
+    <div class="game Singleplayer hid">
+      <div class="gamepic">
+        <img src="public/game_images\GoodleJump.png" alt="Goodle Jump">
+      </div>
+      <div class="gamedesc">
+          <h2>Goodle Jump</h2>
+          <p>Keep on jumping</p>
+      </div>
+    </div>
+    </a>
 
 <!-- Singleplayer Games end here !!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
@@ -37,7 +49,7 @@
       <a href="TicTacToe/index.html">
       <div class="game OneVsOne hid">
         <div class="gamepic">
-          <img src="game_images\TicTacToe2.png" alt="TicTacToe">
+          <img src="public/game_images\TicTacToe2.png" alt="TicTacToe">
         </div>
         <div class="gamedesc">
             <h2>TicTacToe</h2>
@@ -49,7 +61,7 @@
       <a href="Connect4/index.html">
       <div class="game OneVsOne hid">
         <div class="gamepic">
-          <img src="game_images/connect4new.png" alt="Connect 4">
+          <img src="public/game_images/connect4new.png" alt="Connect 4">
         </div>
         <div class="gamedesc">
             <h2>Connect 4</h2>
@@ -61,14 +73,27 @@
       <a href="Battleship/index.html">
         <div class="game OneVsOne hid">
           <div class="gamepic">
-            <img src="game_images/battleship2.png" alt="Battleships">
+            <img src="public/game_images/battleship2.png" alt="Battleships">
           </div>
           <div class="gamedesc">
               <h2>Battleship</h2>
-              <p>Hit or miss Game</p>
+              <p>Hit or miss</p>
           </div>
         </div>
         </a>
+
+        <a href="GlowHockey/index.html">
+          <div class="game OneVsOne hid">
+            <div class="gamepic">
+              <img src="public/game_images/IconGlowHockey2.png" alt="Glow Hockey">
+            </div>
+            <div class="gamedesc">
+                <h2>Glow Hockey</h2>
+                <p>Hockey Game</p>
+            </div>
+          </div>
+          </a>
+  
 
 <!-- 1 vs. 1 Games end here !!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
@@ -79,11 +104,11 @@
       <a href="Guess/index.html">
     <div class="game twoPlayers hid">
       <div class="gamepic">
-        <img src="game_images/explain1.png" alt="Guess">
+        <img src="public/game_images/explain1.png" alt="Guess">
       </div>
       <div class="gamedesc">
           <h2>Guess</h2>
-          <p>Guess simple words</p>
+          <p>Basically Charade</p>
       </div>
     </div>
     </a>
@@ -92,11 +117,11 @@
 <a href="Memory/index.html">
   <div class="game twoPlayers hid">
     <div class="gamepic">
-      <img src="game_images/memory2.png" alt="Memory">
+      <img src="public/game_images/memory2.png" alt="Memory">
     </div>
     <div class="gamedesc">
         <h2>Memory</h2>
-        <p>Simple Memory Game</p>
+        <p>Find a pair to score</p>
     </div>
   </div>
 </a>
@@ -104,11 +129,11 @@
 <a href="Circa/index.html">
   <div class="game twoPlayers hid">
     <div class="gamepic">
-      <img src="game_images/Circa2.png" alt="Circa">
+      <img src="public/game_images/Circa2.png" alt="Circa">
     </div>
     <div class="gamedesc">
         <h2>Circa</h2>
-        <p>Guess to win</p>
+        <p>The closest one, wins</p>
     </div>
   </div>
   </a>
@@ -120,13 +145,33 @@
 
     <div class="rectangle-container">
       <div class="rectangle" data-category="Singleplayer">
-        <p>1 Player</p>
+        <p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+          </svg>
+        </p>
       </div>
       <div class="rectangle" data-category="OneVsOne">
-        <p>1 vs. 1</p>
+        <p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+          </svg>
+          vs.
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+          </svg>
+        </p>
       </div>
       <div class="rectangle" data-category="twoPlayers">
-        <p>2+ Players</p>
+        <p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+          </svg>
+          +
+        </p>
       </div>
     </div>
 
