--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -14,7 +14,7 @@
 
   <h2>Welcome to Battleshipz</h2>
   
-  <img src="../game_images/battleship.png" alt="Battleship" class="battleship">
+  <img src="../public/game_images/battleship.png" alt="Battleship" class="battleship">
 
   <button id="startButton">Spiel starten</button>
 
