Fixed Back-Button in GlowHockey

--- a/games/GlowHockey/index.html
+++ b/games/GlowHockey/index.html
@@ -11,7 +11,7 @@
 <body>
  
     <button id="back-btn">
-        <a href="../../index.html">Go Back</a>
+        <a href="../../index.html" id="externalLink">Go Back</a>
     </button>
     
 
