Added moveable platforms to both GoodleJumps

--- a/games/GoodleJump/index.html
+++ b/games/GoodleJump/index.html
@@ -11,10 +11,9 @@
         <h1>Willkommen zu <br> Goodle Jump!</h1>
         <h2>Bitte wählen Sie einen Charakter</h2>
         <div id="characterSelection">
-            <img src="../GoodleJump/CharacterCut.png" class="characterOption" data-character="../GoodleJump/CharacterCut.png">
-            <img src="../GoodleJump/obstacle.png" class="characterOption" data-character="../GoodleJump/obstacle.png">
-            <img src="../GoodleJump/ufoCut.png" class="characterOption" data-character="../GoodleJump/ufoCut.png">
-            
+            <img src="../GoodleJump/char2.png" class="characterOption" data-character="../GoodleJump/char2.png">
+            <img src="../GoodleJump/char3.png" class="characterOption" data-character="../GoodleJump/char3.png">
+            <img src="../GoodleJump/char4.png" class="characterOption" data-character="../GoodleJump/char4.png">
             <!-- Weitere Charaktere hier hinzufügen -->
         </div>
         
