--- a/games/GoodleJumpIOS/index.html
+++ b/games/GoodleJumpIOS/index.html
@@ -11,9 +11,9 @@
         <h1>Willkommen zu <br> Goodle Jump!</h1>
         <h2>Bitte wählen Sie einen Charakter</h2>
         <div id="characterSelection">
-            <img src="../GoodleJumpIOS/CharacterCut.png" class="characterOption" data-character="../GoodleJumpIOS/CharacterCut.png">
-            <img src="../GoodleJumpIOS/obstacle.png" class="characterOption" data-character="../GoodleJumpIOS/obstacle.png">
-            <img src="../GoodleJumpIOS/ufoCut.png" class="characterOption" data-character="../GoodleJumpIOS/ufoCut.png">
+            <img src="../GoodleJumpIOS/char2.png" class="characterOption" data-character="../GoodleJumpIOS/char2.png">
+            <img src="../GoodleJumpIOS/char3.png" class="characterOption" data-character="../GoodleJumpIOS/char3.png">
+            <img src="../GoodleJumpIOS/char4.png" class="characterOption" data-character="../GoodleJumpIOS/char4.png">
             
             <!-- Weitere Charaktere hier hinzufügen -->
         </div>
